// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress[Base] should render correctly  1`] = `
<div
  class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default"
  style="width: 400px;"
>
  <div
    class="crzltc3 soui-progress-line-bg"
  >
    <div
      class="c-9tchlh soui-progress-line-front"
      style="width: 75%;"
    />
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about animation 1`] = `
<div>
  <div>
    <div
      class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default"
      style="width: 400px;"
    >
      <div
        class="crzltc3 soui-progress-line-bg"
      >
        <div
          class="c-9tchlh soui-progress-line-front"
          style="width: 0%;"
        />
      </div>
      <div
        class="cs3n70v soui-progress-content"
      >
        <div
          style="width: 50px;"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 24px;"
  >
    <div
      class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper cjl6a1m soui-progress-wrapper-success"
      style="width: 64px; height: 64px;"
    >
      <svg
        viewBox="0 0 64 64"
      >
        <circle
          class="c3daza7 soui-progress-circle-bg"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-width="4"
        />
        <circle
          class="cgnmubz soui-progress-circle-front"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-dasharray="0,188.49555921538757"
          stroke-linecap="round"
          stroke-width="0"
        />
      </svg>
      <div
        class="cs3n70v soui-progress-content"
      >
        0%
      </div>
    </div>
  </div>
  <button
    class="c5wkfol soui-button-secondary c871ech soui-button-button"
    style="margin-top: 24px;"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about animation 2`] = `
<div>
  <div>
    <div
      class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default"
      style="width: 400px;"
    >
      <div
        class="crzltc3 soui-progress-line-bg"
      >
        <div
          class="c-9tchlh soui-progress-line-front"
          style="width: 7.122453988142811%;"
        />
      </div>
      <div
        class="cs3n70v soui-progress-content"
      >
        <div
          style="width: 50px;"
        >
          7%
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 24px;"
  >
    <div
      class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper cjl6a1m soui-progress-wrapper-success"
      style="width: 64px; height: 64px;"
    >
      <svg
        viewBox="0 0 64 64"
      >
        <circle
          class="c3daza7 soui-progress-circle-bg"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-width="4"
        />
        <circle
          class="cgnmubz soui-progress-circle-front"
          cx="32"
          cy="32"
          fill="transparent"
          r="30"
          stroke-dasharray="13.425509474808466,175.07004974057912"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
      <div
        class="cs3n70v soui-progress-content"
      >
        7%
      </div>
    </div>
  </div>
  <button
    class="c5wkfol soui-button-secondary c871ech soui-button-button"
    style="margin-top: 24px;"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about circle 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="c3daza7 soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="cgnmubz soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="cs3n70v soui-progress-content"
    >
       
      60%
       
    </div>
  </div>
  <div
    class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper c-1yt2bx soui-progress-wrapper-warning"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="c3daza7 soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="cgnmubz soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="131.9468914507713,56.54866776461628"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="c7xpg0z soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M12 3C11.4477 3 11 3.44772 11 4V16C11 16.5523 11.4477 17 12 17C12.5523 17 13 16.5523 13 16V4C13 3.44772 12.5523 3 12 3ZM12 19C11.4477 19 11 19.4477 11 20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20C13 19.4477 12.5523 19 12 19Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper cjl6a1m soui-progress-wrapper-success"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="c3daza7 soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="cgnmubz soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="150.79644737231007,37.6991118430775"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="c7xpg0z soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M2.29274 13.0709L7.94818 18.7264C8.73024 19.5084 9.99738 19.5084 10.7794 18.7264L22.7988 6.70696C23.1892 6.31663 23.1892 5.68307 22.7988 5.29274C22.4085 4.90242 21.7749 4.90242 21.3846 5.29274L10.0723 16.605C9.6813 16.9961 9.04632 16.9961 8.65529 16.605L3.70696 11.6567C3.31663 11.2664 2.68307 11.2664 2.29274 11.6567C1.90242 12.047 1.90242 12.6806 2.29274 13.0709Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper c-927qxg soui-progress-wrapper-danger"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="c3daza7 soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="cgnmubz soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="169.64600329384882,18.84955592153875"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="c7xpg0z soui-progress-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about color 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 40%;"
      />
    </div>
    <div
      class="cs3n70v soui-progress-content"
    >
      40%
    </div>
  </div>
  <br />
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-9rroq0 soui-progress-line-inner"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 75%;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          75%
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info"
    style="width: 64px; height: 64px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <defs>
        <lineargradient
          id="progress-linear"
          x1="50%"
          x2="50%"
          y1="0%"
          y2="100%"
        >
          <stop
            offset="0%"
            stop-color="#19A9FA"
          />
          <stop
            offset="100%"
            stop-color="#7949FF"
          />
        </lineargradient>
      </defs>
      <circle
        class="c3daza7 soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="cgnmubz soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
        style="stroke: url('#progress-linear');"
      />
    </svg>
    <div
      class="cs3n70v soui-progress-content"
    >
      60%
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about lineInner 1`] = `
<div
  style="display: flex; flex-direction: column; gap: 32px; width: 400px;"
>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-9rroq0 soui-progress-line-inner chm9gis soui-progress-line-inner-right"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 0%;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          0%
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-9rroq0 soui-progress-line-inner chm9gis soui-progress-line-inner-right"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 5%;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          5%
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-9rroq0 soui-progress-line-inner"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 40%;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          10%
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-1yt2bx soui-progress-wrapper-warning c-9rroq0 soui-progress-line-inner"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 50%;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          50%
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper cjl6a1m soui-progress-wrapper-success c-9rroq0 soui-progress-line-inner"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 100%;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          100%
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-927qxg soui-progress-wrapper-danger c-9rroq0 soui-progress-line-inner"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 60%;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          60%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about linePop 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default cfafwcz soui-progress-line-pop"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 0%;"
      />
    </div>
    <div
      class="cugkdj4 soui-progress-line-pop-wrapper"
      style="left: 0%; transform: translateX(-50%) rotate(0deg);"
    >
      <span
        class="c-9yx942 soui-progress-line-pop-value"
      >
        0%
      </span>
      <span
        class="c-aa5yh6 soui-progress-line-pop-arrow"
      />
    </div>
  </div>
  <br />
  <button
    class="c5wkfol soui-button-secondary c871ech soui-button-button"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about linepop 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default cfafwcz soui-progress-line-pop"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 1.2931766369774849%;"
      />
    </div>
    <div
      class="cugkdj4 soui-progress-line-pop-wrapper"
      style="left: 1.2931766369774849%; transform: translateX(-50%) rotate(0.3232941592443712deg);"
    >
      <span
        class="c-9yx942 soui-progress-line-pop-value"
      >
        1%
      </span>
      <span
        class="c-aa5yh6 soui-progress-line-pop-arrow"
      />
    </div>
  </div>
  <br />
  <button
    class="c5wkfol soui-button-secondary c871ech soui-button-button"
    type="button"
  >
    <span>
      Start
    </span>
  </button>
</div>
`;

exports[`Progress[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-ggxw0v soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 75%;"
      />
    </div>
    <div
      class="cs3n70v soui-progress-content"
    >
      <span>
        75%
      </span>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-9rroq0 soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 40%;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info"
    style="width: 64px; height: 64px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 64 64"
    >
      <circle
        class="c3daza7 soui-progress-circle-bg"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-width="4"
      />
      <circle
        class="cgnmubz soui-progress-circle-front"
        cx="32"
        cy="32"
        fill="transparent"
        r="30"
        stroke-dasharray="113.09733552923254,75.39822368615503"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="cs3n70v soui-progress-content"
    >
      <span>
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 2`] = `
<div>
  <div
    class="c-ggxw0v soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
      style="height: 3px; border-radius: 1.5px;"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 75%; border-radius: 1.5px;"
      />
    </div>
    <div
      class="cs3n70v soui-progress-content"
    >
      <span
        style="font-size: 12px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-9rroq0 soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
      style="height: 16px; border-radius: 8px;"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 40%; border-radius: 8px;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          <span
            style="font-size: 12px;"
          >
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info"
    style="width: 48px; height: 48px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 48 48"
    >
      <circle
        class="c3daza7 soui-progress-circle-bg"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-width="4"
      />
      <circle
        class="cgnmubz soui-progress-circle-front"
        cx="24"
        cy="24"
        fill="transparent"
        r="22"
        stroke-dasharray="82.93804605477052,55.29203070318036"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="cs3n70v soui-progress-content"
    >
      <span
        style="font-size: 12px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about size 3`] = `
<div>
  <div
    class="c-ggxw0v soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-smsfdq soui-radio-indicator-wrapper"
      >
        <span
          class="c-cz3aa7 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-iv35qp soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default"
    style="width: 400px;"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
      style="height: 8px; border-radius: 4px;"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 75%; border-radius: 4px;"
      />
    </div>
    <div
      class="cs3n70v soui-progress-content"
    >
      <span
        style="font-size: 16px;"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-9rroq0 soui-progress-line-inner"
    style="width: 400px; margin-top: 24px;"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
      style="height: 24px; border-radius: 12px;"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 40%; border-radius: 12px;"
      >
        <div
          class="cs3n70v soui-progress-content"
        >
          <span>
            40%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cnq9r96 soui-progress-circle c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info"
    style="width: 80px; height: 80px; margin-top: 24px;"
  >
    <svg
      viewBox="0 0 80 80"
    >
      <circle
        class="c3daza7 soui-progress-circle-bg"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-width="4"
      />
      <circle
        class="cgnmubz soui-progress-circle-front"
        cx="40"
        cy="40"
        fill="transparent"
        r="38"
        stroke-dasharray="143.25662500369455,95.50441666912971"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="cs3n70v soui-progress-content"
    >
      <span
        style="font-size: 16px;"
      >
        60%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress[Base] should render correctly about type 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper cjl6a1m soui-progress-wrapper-success c-kxyfst soui-progress-line-default"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 100%;"
      />
    </div>
  </div>
  <br />
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-jw0sp5 soui-progress-wrapper-info c-kxyfst soui-progress-line-default"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 90%;"
      />
    </div>
  </div>
  <br />
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-1yt2bx soui-progress-wrapper-warning c-kxyfst soui-progress-line-default"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 80%;"
      />
    </div>
  </div>
  <br />
  <div
    class="c7xrhem soui-progress-line c-wa26xj soui-progress-wrapper c-927qxg soui-progress-wrapper-danger c-kxyfst soui-progress-line-default"
  >
    <div
      class="crzltc3 soui-progress-line-bg"
    >
      <div
        class="c-9tchlh soui-progress-line-front"
        style="width: 70%;"
      />
    </div>
  </div>
</div>
`;
